[package]
name = "abscissa_test"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
failure = "0.1"
gumdrop = "0.6"
lazy_static = "1"
serde = { version = "1", features = ["serde_derive"] }

[dependencies.abscissa_core]
version = "0.2.1"

[dev-dependencies.abscissa_core]
version = "0.2.1"
features = ["testing"]

