[package]
name = "raftkv"
version = "0.1.0"
authors = ["jzhang <zhangchunzhong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
hyper = "0.12"
pretty_env_logger = "0.3.0"
futures = "0.1.28"
hyperdrive = "0.1.1"
serde = "1.0.94"
http = "0.1.17"
tokio = "0.1.22"