[package]
name = "raftkv"
version = "0.1.0"
authors = ["jzhang <zhangchunzhong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
pretty_env_logger = "0.3.0"
raft = "0.5.0"
actix = "0.8.3"
actix-web = "1.0.5"
serde = "1.0.97"
serde_derive = "1.0.97"
