[package]
name = "rust-grpc"
version = "0.1.0"
authors = ["jzhang <zhangchunzhong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
bytes = "0.4.12"
env_logger = { version = "0.6.2", default-features = false }
log = "0.4.8"
http = "0.1.18"
prost = "0.5"
tokio = "0.1.22"
tower-request-modifier = "0.1.0"
tower-hyper = "0.1.1"
hyper = "0.12.33"
tower-grpc = { version = "0.1.0",  features = ["tower-hyper"] }
tower-service = "0.2.0"
tower-util = "0.1.0"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[build-dependencies]
tower-grpc-build = { version = "0.1.0",  features = ["tower-hyper"]  }